# Networking-Agent

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
scout/: __init__.py  __main__.py  cli.py
scout/config/: settings.py
scout/extractors/: article.py  article_people.py  company.py  person.py  rss.py  team.py  team_url_finder.py
scout/llm/: anthropic_provider.py  base.py  factory.py  openai_provider.py  prompts.py
scout/models/: __init__.py  article.py  company.py  config.py  output.py  person.py  rss.py
scout/output/: __init__.py  csv_writer.py  sheets_writer.py
scout/pipeline/: filters.py  runner.py
scout/scoring/: scorer.py
scout/storage/: __init__.py  database.py  schema.sql
scout/utils/: logger.py
