[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "startup-outreach-scout"
version = "0.1.0"
description = "Automated networking candidate discovery from RSS feeds"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "instructor>=0.6.0",
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pandas>=2.0.0",
    "gspread>=5.12.0",
    "google-auth>=2.25.0",
    "tenacity>=8.2.3",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scout*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
